# never-say-never.rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain
.cargo/: config
.github/workflows/: CI.yml  future-proof.yml
src/: compile_fail_tests.md  lib.rs
